kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: workout-motivator-backend
  namespace: workout-motivator
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: workout-motivator-backend
