kubernetes/acme-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-challenge-ingress
  namespace: workout-motivator
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location ^~ /.well-known/acme-challenge/ {
        auth_basic off;
        proxy_pass_request_body off;
        proxy_set_header Content-Length "";
      }
spec:
  ingressClassName: nginx
  rules:
  - host: fitfocusapp.com
    http:
      paths:
      - path: /.well-known/acme-challenge/(.*)
        pathType: Prefix
        backend:
          service:
            name: cm-acme-http-solver-ppxj4
            port:
              number: 80
  - host: www.fitfocusapp.com
    http:
      paths:
      - path: /.well-known/acme-challenge/(.*)
        pathType: Prefix
        backend:
          service:
            name: cm-acme-http-solver-jxnrr
            port:
              number: 80
