kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workout-motivator-ingress
  namespace: workout-motivator
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - fitfocusapp.com
    - www.fitfocusapp.com
    secretName: fitfocusapp-tls
  rules:
  - host: fitfocusapp.com
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: workout-motivator-backend
            port:
              number: 8000
      - path: /(?!.well-known/acme-challenge/)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: workout-motivator-frontend
            port:
              number: 80
  - host: www.fitfocusapp.com
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: workout-motivator-backend
            port:
              number: 8000
      - path: /(?!.well-known/acme-challenge/)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: workout-motivator-frontend
            port:
              number: 80
